@@ -28,7 +28,7 @@ main(void)
     pid_t remctld;
     struct remctl *r;
     struct remctl_output *output;
-    struct iovec command[5];
+    struct iovec command[7];
     struct timeval tv;
 
     test_init(6);
@@ -45,19 +45,24 @@ main(void)
         command[0].iov_base = (char *) "test";
         command[1].iov_len = strlen("noauth");
         command[1].iov_base = (char *) "noauth";
-        command[2].iov_len = 64 * 1024 - 27;
+        command[2].iov_len = TOKEN_MAX_DATA - 31;
         command[2].iov_base = xmalloc(command[2].iov_len);
         memset(command[2].iov_base, 'A', command[2].iov_len);
-        command[3].iov_len = 64 * 1024 - 3;
+        command[3].iov_len = TOKEN_MAX_DATA;
         command[3].iov_base = xmalloc(command[3].iov_len);
         memset(command[3].iov_base, 'B', command[3].iov_len);
-        command[4].iov_len = 0;
-        command[4].iov_base = (char *) "";
+        command[4].iov_len = TOKEN_MAX_DATA - 20;
+        command[4].iov_base = xmalloc(command[4].iov_len);
+        memset(command[4].iov_base, 'C', command[4].iov_len);
+        command[5].iov_len = 1;
+        command[5].iov_base = (char *) "D";
+        command[6].iov_len = 0;
+        command[6].iov_base = (char *) "";
 
         r = remctl_new();
         ok(1, r != NULL);
         ok(2, remctl_open(r, "localhost", 14444, principal));
-        ok(3, remctl_commandv(r, command, 5));
+        ok(3, remctl_commandv(r, command, 7));
         output = remctl_output(r);
         printf("\n");
         ok(4, output != NULL);
